--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -455,9 +455,9 @@ azure-common==1.1.27 # LEVEL_01 # Microsoft Azure Client Library for Python (Com
 smart-open==5.2.1 # LEVEL_01 # Utils for streaming large files (S3, HDFS, GCS, Azure Blob Storage, gzip, bz2...)
 
 # Amazon
-boto3==1.20.20  # LEVEL_05 # The AWS SDK for Python # required by bertviz # The AWS SDK for Python
+boto3==1.20.21  # LEVEL_05 # The AWS SDK for Python # required by bertviz # The AWS SDK for Python
 s3transfer==0.5.0 # LEVEL_04 # An Amazon S3 Transfer Manager
-botocore==1.23.20 # LEVEL_03 # required by boto3 # Low-level, data-driven core of boto 3
+botocore==1.23.21 # LEVEL_03 # required by boto3 # Low-level, data-driven core of boto 3
 
 #
 # Jupyter
@@ -985,4 +985,8 @@ querystring-parser==1.2.4 # LEVEL_02 # QueryString parser for Python/Django that
 #
 # Manually
 # git+https://github.com/zzzeek/sliderepl # LEVEL_02
+#
+
+amqp==5.0.6 # LEVEL_02 # Low-level AMQP client for Python (fork of amqplib)
+vine==5.0.0 # LEVEL_01 # Promises, promises, promises
 #
