--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -495,8 +495,10 @@ matplotlib-inline==0.1.3 # LEVEL_02 # Inline Matplotlib backend for Jupyter
 Flask-Compress==1.10.1 # LEVEL_04 # Compress responses in your Flask app with gzip, deflate or brotli
 Flask-SeaSurf==0.3.1 # LEVEL_04 # An updated CSRF extension for Flask
 Flask-Caching==1.10.1 # LEVEL_04 # Adds caching support to your Flask application
+Flask-CacheBuster==1.0.0 # LEVEL_04 # Flask-CacheBuster is a lightweight Flask extension that adds a hash to the URL query parameters of each static file
+Flask-Cors==3.0.10 # LEVEL_04 # A Flask extension adding a decorator for CORS support
+Flask-Login==0.5.0 # LEVEL_04 # User session management for Flask
 Flask==2.0.2 # LEVEL_03 # A simple framework for building complex web applications
-
 #
 # Json
 #
