--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -350,22 +350,33 @@ oandapyV20==0.7.2 # LEVEL_01 # urwid urwidtrees # for OANDA console # Python wra
 #alpaca-trade-api==1.3.0 # LEVEL_02 # old dependencies
 # histdata-downloader npyscreen # Forex Downloader
 #
-#
 py-vollib==1.0.1 # LEVEL_04 # option pricing
-#
 robin-stocks==2.1.0 # LEVEL_04 # A Python wrapper around the Robinhood API
+stockstats==0.3.2 # LEVEL_04 # DataFrame with inline stock statistics support
+pyportfolioopt==1.5.1 # LEVEL_06 # Financial portfolio optimization in python
+#
+#
+# Password & Cryptography
+#
+argon2-cffi==21.2.0 # LEVEL_04 # The secure Argon2 password hashing algorithm
+argon2-cffi-bindings==21.2.0 # LEVEL_03 # Low-level CFFI bindings for Argon2
 cryptography==36.0.0 # LEVEL_03 # cryptography is a package which provides cryptographic recipes and primitives to Python developers
+keyring==23.4.0 # LEVEL_03 # Store and access your passwords safely
+PyNaCl==1.4.0 # LEVEL_03 # Python binding to the Networking and Cryptography (NaCl) library
+oscrypto==1.2.1 # LEVEL_02 # TLS (SSL) sockets, key generation, encryption, decryption, signing, verification and KDFs using the OS crypto libraries. Does not require a compiler, and relies on the OS for patching. Works on Windows, OS X and Linux/BSD
+pyotp==2.6.0 # LEVEL_01 # Python One Time Password Library
+pycryptodomex==3.12.0 # LEVEL_01 # Cryptographic library for Python
+asn1crypto==1.4.0 # LEVEL_01 # Fast ASN.1 parser and serializer with definitions for private keys, public keys, certificates, CRL, OCSP, CMS, PKCS#3, PKCS#7, PKCS#8, PKCS#12, PKCS#5, X.509 and TSP
+#
+#
 #
 Authlib==0.15.5 # LEVEL_04 # The ultimate Python library in building OAuth and OpenID Connect servers
 h11==0.12.0 # LEVEL_01 # A pure-Python, bring-your-own-I/O implementation of HTTP/1.1
-pyotp==2.6.0 # LEVEL_01 # Python One Time Password Library
 python-dotenv==0.19.2 # LEVEL_01 # Read key-value pairs from a .env file and set them as environment variables
 rfc3986==1.5.0 # LEVEL_01 # Validating URI References per RFC 3986
 selenium==4.1.0 # LEVEL_05 #
 #
-stockstats==0.3.2 # LEVEL_04 # DataFrame with inline stock statistics support
 #
-pyportfolioopt==1.5.1 # LEVEL_06 # Financial portfolio optimization in python
 cvxpy==1.1.17 # LEVEL_05 # A domain-specific language for modeling convex optimization problems in Python
 ecos==2.0.7.post1 # LEVEL_03 # This is the Python package for ECOS: Embedded Cone Solver. See Github page for more information
 osqp==0.6.2.post0 # LEVEL_04 # OSQP: The Operator Splitting QP Solver
@@ -499,7 +510,7 @@ django-http-exceptions==1.4.0 # LEVEL_03 # django raisable http exceptions
 django-model-utils==4.2.0 # LEVEL_03 # Django model mixins and utilities
 django-request-logging==0.7.3 # LEVEL_03 # Django middleware that logs http request body
 djangorestframework==3.12.4 # LEVEL_03 # Web APIs for Django, made easy
-Django==3.2.9 # LEVEL_02 # A high-level Python Web framework that encourages rapid development and clean, pragmatic design
+Django==4.0 # LEVEL_02 # A high-level Python web framework that encourages rapid development and clean, pragmatic design
 asgiref==3.4.1 # LEVEL_01 # ASGI specs, helper code, and adapters
 
 #
@@ -649,7 +660,6 @@ altgraph==0.17.2 # LEVEL_01 # Python graph (network) package
 anyio==3.4.0 # LEVEL_02 # High level compatibility layer for multiple asynchronous event loop implementations
 appdirs==1.4.4 # LEVEL_01 # A small Python module for determining appropriate platform-specific dirs, e.g. a "user data dir"
 appnope==0.1.2 # LEVEL_01 # Disable App Nap on macOS >= 10.9
-argon2-cffi==21.1.0 # LEVEL_03 # The secure Argon2 password hashing algorithm
 ast-decompiler==0.4.0 # LEVEL_01 # Python module to decompile AST to Python code
 astunparse==1.6.3 # LEVEL_02 # An AST unparser for Python
 asynq==1.4.0 # LEVEL_03 # Quora's asynq library
@@ -838,7 +848,6 @@ wsproto==1.0.0 # LEVEL_02 # WebSockets state-machine based protocol implementati
 validators==0.18.2 # LEVEL_02 # Python Data Validation for Humans™
 #
 PyGithub==1.55 # LEVEL_04 # Use the full Github API v3
-PyNaCl==1.4.0 # LEVEL_03 # Python binding to the Networking and Cryptography (NaCl) library
 GitPython==3.1.24 # LEVEL_03 # GitPython is a python library used to interact with Git repositories
 gitdb==4.0.9 # LEVEL_02 # Git Object Database
 #
@@ -950,16 +959,12 @@ zarr==2.10.3 # LEVEL_03 # An implementation of chunked, compressed, N-dimensiona
 asciitree==0.3.3 # LEVEL_01 # Draws ASCII trees
 #
 # dbt !! not compatible with many versions !!
-asn1crypto==1.4.0 # LEVEL_01 # Fast ASN.1 parser and serializer with definitions for private keys, public keys, certificates, CRL, OCSP, CMS, PKCS#3, PKCS#7, PKCS#8, PKCS#12, PKCS#5, X.509 and TSP
 dbt-extractor==0.4.0 # LEVEL_01
-keyring==23.4.0 # LEVEL_03 # Store and access your passwords safely
 leather==0.3.4 # LEVEL_02 # Python charting for 80% of humans
 Logbook==1.5.3 # LEVEL_01 # A logging replacement for Python
 mashumaro==2.9 # LEVEL_02 # Fast serialization framework on top of dataclasses
 minimal-snowplow-tracker==0.0.2 # LEVEL_03 # A minimal snowplow event tracker for Python. Add analytics to your Python and Django apps, webapps and games
 msrest==0.6.21 # LEVEL_04 # AutoRest swagger generator Python client runtime
-oscrypto==1.2.1 # LEVEL_02 # TLS (SSL) sockets, key generation, encryption, decryption, signing, verification and KDFs using the OS crypto libraries. Does not require a compiler, and relies on the OS for patching. Works on Windows, OS X and Linux/BSD
-pycryptodomex==3.12.0 # LEVEL_01 # Cryptographic library for Python
 ruamel_yaml==0.17.17 # LEVEL_02 # ruamel.yaml is a YAML parser/emitter that supports roundtrip preservation of comments, seq/map flow style, and map key order
 ruamel_yaml_clib==0.2.6 # LEVEL_01 # C version of reader, parser and emitter for ruamel.yaml derived from libyaml
 #
