minor version up

--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -472,6 +472,7 @@ uamqp==1.4.3 # LEVEL_02 # AMQP 1.0 Client Library for Python
 boto3==1.20.23  # LEVEL_05 # The AWS SDK for Python # required by bertviz # The AWS SDK for Python
 s3transfer==0.5.0 # LEVEL_04 # An Amazon S3 Transfer Manager
 botocore==1.23.23 # LEVEL_03 # required by boto3 # Low-level, data-driven core of boto 3
+boto==2.49.0 # LEVEL_01 # Amazon Web Services Library
 
 #
 # Jupyter
@@ -1012,3 +1013,7 @@ querystring-parser==1.2.4 # LEVEL_02 # QueryString parser for Python/Django that
 amqp==5.0.6 # LEVEL_02 # Low-level AMQP client for Python (fork of amqplib)
 vine==5.0.0 # LEVEL_01 # Promises, promises, promises
 #
+
+analytics-python==1.4.0 # LEVEL_03 # The hassle-free way to integrate analytics into any python application
+backoff==1.10.0 # LEVEL_01 # Function decoration for backoff and retry
+monotonic==1.6 # LEVEL_01 # An implementation of time.monotonic() for Python 2 & < 3.3
