--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -95,6 +95,8 @@ visions==0.7.4 # LEVEL_04 # LOCKED # pandas-profiling 3.1.0 requires visions[typ
 #
 backoff==1.10.0 # LEVEL_01 # LOCKED # analytics-python requires 1.10.0 # Function decoration for backoff and retry
 #
+starlette==0.16.0 # LEVEL_03 # LOCKED # needed by fastapi # The little ASGI library that shines
+#
 #
 # Former LOCKED .. now freed ;-)
 #
@@ -362,7 +364,7 @@ pyportfolioopt==1.5.1 # LEVEL_06 # Financial portfolio optimization in python
 #
 # Password & Cryptography
 #
-argon2-cffi==21.2.0 # LEVEL_04 # The secure Argon2 password hashing algorithm
+argon2-cffi==21.3.0 # LEVEL_04 # The secure Argon2 password hashing algorithm
 bcrypt==3.2.0 # LEVEL_03 # Modern password hashing for your software and your servers
 argon2-cffi-bindings==21.2.0 # LEVEL_03 # Low-level CFFI bindings for Argon2
 cryptography==36.0.0 # LEVEL_03 # cryptography is a package which provides cryptographic recipes and primitives to Python developers
@@ -372,6 +374,7 @@ oscrypto==1.2.1 # LEVEL_02 # TLS (SSL) sockets, key generation, encryption, decr
 pyotp==2.6.0 # LEVEL_01 # Python One Time Password Library
 pycryptodomex==3.12.0 # LEVEL_01 # Cryptographic library for Python
 asn1crypto==1.4.0 # LEVEL_01 # Fast ASN.1 parser and serializer with definitions for private keys, public keys, certificates, CRL, OCSP, CMS, PKCS#3, PKCS#7, PKCS#8, PKCS#12, PKCS#5, X.509 and TSP
+pycryptodome==3.12.0 # LEVEL_01 # Cryptographic library for Python
 #
 #
 #
@@ -589,7 +592,7 @@ mypy-extensions==0.4.3 # LEVEL_01 # Experimental type system extensions for prog
 autopep8==1.6.0 # LEVEL_02 # using fix_file # A tool that automatically formats Python code to conform to the PEP 8 style guide
 memory-profiler==0.59.0 # LEVEL_02 # A module for monitoring memory usage of a python program
 mccabe==0.6.1 # LEVEL_01 # McCabe checker, plugin for flake8
-typeguard==2.13.2 # LEVEL_01 # Run-time type checker for Python
+typeguard==2.13.3 # LEVEL_01 # Run-time type checker for Python
 pyflakes==2.4.0 # LEVEL_01 # required by flake8 # passive checker of Python programs
 pycodestyle==2.8.0 # LEVEL_01 # Python style guide checker
 py-spy==0.3.11 # LEVEL_01 # Sampling profiler for Python programs
@@ -598,6 +601,7 @@ py-spy==0.3.11 # LEVEL_01 # Sampling profiler for Python programs
 # Markdown
 Markdown==3.3.6 # LEVEL_03 # Python implementation of Markdown
 commonmark==0.9.1 # LEVEL_01 # Python parser for the CommonMark Markdown spec
+markdown2==2.4.2 # LEVEL_01 # A fast and complete Python implementation of Markdown
 
 # HTML scraping, sanitizing, minimizing
 beautifulsoup4==4.10.0 # LEVEL_02 # Screen-scraping library
@@ -1026,7 +1030,6 @@ analytics-python==1.4.0 # LEVEL_03 # The hassle-free way to integrate analytics 
 click-repl==0.2.0 # LEVEL_03 # REPL plugin for Click
 kombu==5.2.2 # LEVEL_03  # Messaging library for Python
 curtsies==0.3.10 # LEVEL_03 # Curses-like terminal wrapper, with colored strings!
-starlette==0.16.0 # LEVEL_03 # The little ASGI library that shines
 click-didyoumean==0.3.0 # LEVEL_02 # Enables git-like *did-you-mean* feature in click
 monotonic==1.6 # LEVEL_01 # An implementation of time.monotonic() for Python 2 & < 3.3
 billiard==3.6.4.0 # LEVEL_01 # Python multiprocessing fork with improvements and bugfixes
@@ -1035,8 +1038,5 @@ waitress==2.0.0 # LEVEL_01 # Waitress WSGI server
 boltons==21.0.0 # LEVEL_01 # When they're not builtins, they're boltons
 ffmpy==0.3.0 # LEVEL_01 # A simple Python wrapper for ffmpeg
 humanize==3.13.1 # LEVEL_01 # Python humanize utilities
-backports.cached-property==1.0.1 # LEVEL_01 # cached_property() - computed once per instance, cached as attribute
-markdown2==2.4.2 # LEVEL_01 # A fast and complete Python implementation of Markdown
-pycryptodome==3.12.0 # LEVEL_01 # Cryptographic library for Python
 pydub==0.25.1 # LEVEL_01 # Manipulate audio with an simple and easy high level interface
 #
