--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -97,6 +97,8 @@ backoff==1.10.0 # LEVEL_01 # LOCKED # analytics-python requires 1.10.0 # Functio
 #
 starlette==0.16.0 # LEVEL_03 # LOCKED # needed by fastapi # The little ASGI library that shines
 #
+flatbuffers==1.12 # LEVEL_01 # LOCKED # The FlatBuffers serialization format for Python
+#
 #
 # Former LOCKED .. now freed ;-)
 #
@@ -106,7 +108,6 @@ six==1.16.0 # LEVEL_01 # Python 2 and 3 compatibility utilities
 clang==11.0 # LEVEL_01 # libclang python bindings
 h5py==3.6.0 # LEVEL_02 # Read and write HDF5 files from Python
 google-auth==2.3.3 # LEVEL_03 # Google Authentication Library
-flatbuffers==2.0 # LEVEL_01 # The FlatBuffers serialization format for Python
 wrapt==1.13.3 # LEVEL_01 # Module for decorators, wrappers and monkey patching
 panel==0.12.6 # LEVEL_04 # A high level app and dashboarding solution for Python
 bokeh==2.4.2 # LEVEL_03 # Interactive plots and applications in the browser from Python
@@ -1039,4 +1040,11 @@ boltons==21.0.0 # LEVEL_01 # When they're not builtins, they're boltons
 ffmpy==0.3.0 # LEVEL_01 # A simple Python wrapper for ffmpeg
 humanize==3.13.1 # LEVEL_01 # Python humanize utilities
 pydub==0.25.1 # LEVEL_01 # Manipulate audio with an simple and easy high level interface
+more-itertools==8.12.0 # LEVEL_01 # More routines for operating on iterables, beyond itertools
+#
+mixpanel==4.9.0 # LEVEL_03 # Official Mixpanel library for Python
+uvicorn==0.16.0 # LEVEL_02 # The lightning-fast ASGI server
+#
+onnx==1.10.2 # LEVEL_02 # Open Neural Network Exchange
+tf2onnx==1.9.3 # LEVEL_03 # Tensorflow to ONNX converter
 #
