--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -1045,6 +1045,10 @@ more-itertools==8.12.0 # LEVEL_01 # More routines for operating on iterables, be
 mixpanel==4.9.0 # LEVEL_03 # Official Mixpanel library for Python
 uvicorn==0.16.0 # LEVEL_02 # The lightning-fast ASGI server
 #
+onnxconverter-common==1.9.0 # LEVEL_03 # ONNX Converter and Optimization Tools
 onnx==1.10.2 # LEVEL_02 # Open Neural Network Exchange
 tf2onnx==1.9.3 # LEVEL_03 # Tensorflow to ONNX converter
+keras2onnx==1.7.0 # LEVEL_04 # Converts Machine Learning models to ONNX for use in Windows ML
+keras-unet-collection==0.1.11 # LEVEL_01 # The Tensorflow, Keras implementation of U-net, V-net, U-net++, UNET 3+, Attention U-net, R2U-net, ResUnet-a, U^2-Net, TransUNET, and Swin-UNET with optional ImageNet-trained backbones
+
 #
