--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -95,6 +95,10 @@ flatbuffers==1.12 # LEVEL_01 # LOCKED # The FlatBuffers serialization format for
 #
 cachetools==4.2.4 # LEVEL_01 # LOCKED # google-auth 2.3.3 requires it # Extensible memoizing collections and decorators
 #
+typeshed-client==1.2.3 # LEVEL_03 # LOCKED # pyanalyze 0.5.0 requires typeshed-client<2,>=1.0.0 # A library for accessing stubs in typeshed
+#
+tokenizers==0.10.3 # LEVEL_01 # LOCKED # transformers 4.15.0 has requirement tokenizers<0.11,>=0.10.1 # Fast and Customizable Tokenizers
+#
 #
 # Former LOCKED .. now freed ;-)
 #
@@ -287,8 +291,6 @@ thinc==8.0.13 # LEVEL_03 # A refreshing functional take on deep learning, compat
 #
 transformers==4.15.0 # LEVEL_04 # State-of-the-art Natural Language Processing for TensorFlow 2.0 and PyTorch
 #
-tokenizers==0.10.3 # LEVEL_01 # Fast and Customizable Tokenizers
-#
 wordcloud==1.8.1 # LEVEL_04 # A little word cloud generator
 #
 snowballstemmer==2.2.0 # LEVEL_01 # This package provides 29 stemmers for 28 languages generated from Snowball algorithms
@@ -332,7 +334,7 @@ imagecodecs-lite==2020.1.31 # LEVEL_03 # The imagecodecs-lite package is depreca
 imagecodecs==2021.11.20 # LEVEL_02 # Image transformation, compression, and decompression codecs
 opencv-python==4.5.4.60 # LEVEL_02 # Wrapper package for OpenCV python bindings
 opencv-python-headless==4.5.4.60 # LEVEL_02 # Wrapper package for OpenCV python bindings
-imageio==2.13.4 # LEVEL_02 # Library for reading and writing a wide range of image, video, scientific, and volumetric data formats
+imageio==2.13.5 # LEVEL_02 # Library for reading and writing a wide range of image, video, scientific, and volumetric data formats
 tifffile==2021.11.2 # LEVEL_02 # Read and write TIFF files
 Pillow==8.4.0 # LEVEL_01 # Python Imaging Library (Fork)
 imagesize==1.3.0 # LEVEL_01 # Getting image size from png/jpeg/jpeg2000/gif file
@@ -807,7 +809,6 @@ tqdm==4.62.3 # LEVEL_01 # Fast, Extensible Progress Meter
 traitlets==5.1.1 # LEVEL_01 # Traitlets Python configuration system
 typed-ast==1.5.1 # LEVEL_01 # a fork of Python 2 and 3 ast modules with type comment support
 typer==0.4.0 # LEVEL_02 # Typer, build great CLIs. Easy to code. Based on Python type hints
-typeshed-client==1.2.3 # LEVEL_03 # A library for accessing stubs in typeshed
 typing-inspect==0.7.1 # LEVEL_02 # Runtime inspection utilities for typing module
 ua-parser==0.10.0 # LEVEL_01 # Python port of Browserscope's user agent parser
 Unidecode==1.3.2 # LEVEL_01 # ASCII transliterations of Unicode text
@@ -831,7 +832,7 @@ python-socks==2.0.1 # LEVEL_01 # Core proxy (SOCKS4, SOCKS5, HTTP tunneling) fun
 #
 # SQL
 #
-SQLAlchemy== 1.4.28 # LEVEL_02 # Database Abstraction Library
+SQLAlchemy== 1.4.29 # LEVEL_02 # Database Abstraction Library
 PyMySQL==1.0.2 # LEVEL_01 # Pure Python MySQL Driver
 pyodbc==4.0.32 # LEVEL_01 # DB API Module for ODBC
 sqlparse==0.4.2 # LEVEL_01 # A non-validating SQL parser
@@ -844,7 +845,7 @@ greenlet==1.1.2 # LEVEL_01 # required by SQLAlchemy # Lightweight in-process con
 #
 #streamlit # has some dependencies !!
 tbb==2021.5.0 # LEVEL_01 # Intel® oneAPI Threading Building Blocks (oneTBB)
-tiledb==0.11.4 # LEVEL_02 # Pythonic interface to the TileDB array storage manager
+tiledb==0.11.5 # LEVEL_03 # Pythonic interface to the TileDB array storage manager
 xarray==0.20.2 # LEVEL_04 # N-D labeled arrays and datasets in Python
 zstd==1.5.0.4 # LEVEL_01 # ZSTD Bindings for Python
 #
